--- a/app/src/main/res/layout/activity_add_pet.xml
+++ b/app/src/main/res/layout/activity_add_pet.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:backgroundTint="@color/purple_700"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".AddPet">
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -20,38 +22,29 @@
 
         <ImageView
             android:id="@+id/img"
-            android:layout_width="300dp"
+            android:layout_width="207dp"
             android:layout_height="200dp"
-            app:srcCompat="@drawable/ic_launcher_background" />
+            android:layout_marginLeft="45dp"
+            app:srcCompat="@drawable/sdfasd" />
 
         <Button
             android:id="@+id/browse"
             android:layout_width="wrap_content"
+            android:fontFamily="@font/font1"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="Browse" />
+            android:text="Add Image" />
     </LinearLayout>
 
     <EditText
         android:id="@+id/name"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="48dp"
+        android:fontFamily="@font/font1"
         android:hint="Name of Owner"
-        android:textColor="#000"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
-    <EditText
-        android:id="@+id/sno"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:hint="sno"
-        android:textColor="#000"
+        android:textColor="#FFFFFF"
+        android:textColorHint="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -64,7 +57,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:hint="Contact No."
-        android:textColor="#000"
+        android:textColorHint="@color/white"
+        android:fontFamily="@font/font1"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -77,9 +72,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:hint="Breed of Pet"
-        android:textColor="#000"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColorHint="@color/white"
+        android:fontFamily="@font/font1"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
@@ -89,10 +86,14 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/font1"
+
         android:hint="Address"
-        android:textColor="#000"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textColorHint="@color/white"
+
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contact" />
@@ -102,11 +103,22 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="Signup"
+        android:text="Add Pet"
+        android:textSize="25sp"
+        android:fontFamily="@font/font1"
         android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/address" />
 
+    <ImageView
+        android:layout_width="104dp"
+        android:layout_height="226dp"
+        android:layout_marginTop="580dp"
+        android:src="@drawable/ssff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
