--- a/app/src/main/res/layout/main_item.xml
+++ b/app/src/main/res/layout/main_item.xml
@@ -1,63 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="6dp"
+    app:cardCornerRadius="16dp"
     android:elevation="6dp"
     app:cardUseCompatPadding="true">
-    <RelativeLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:animateLayoutChanges="true"
+        android:background="@color/white"
+        android:backgroundTint="#5E467A"
+        android:fadeScrollbars="true"
         android:padding="15dp">
+
+
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@mipmap/ic_launcher"
-            android:layout_centerVertical="true"
             android:id="@+id/img1"
+            android:layout_width="119dp"
+            android:layout_height="125dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="4dp"
+            android:src="@mipmap/ic_launcher"
+            app:civ_border_color="#FF000000"
             app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/nametext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img1"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/font1"
             android:text="Name"
+            android:textColor="#C59292"
             android:textSize="25sp"
-            android:textColor="#000"
-            android:layout_toRightOf="@+id/img1"
-            android:layout_margin="10dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.168"
+            app:layout_constraintStart_toEndOf="@+id/nametext2"
+            app:layout_constraintTop_toBottomOf="@+id/img1" />
+
+        <TextView
+            android:id="@+id/nametext2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img1"
+            android:fontFamily="@font/font1"
+            android:text="Name:"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/nametext"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.149"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/breedtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nametext"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/font1"
+            android:text="Breed"
+            android:textColor="#C59292"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.177"
+            app:layout_constraintStart_toEndOf="@+id/breedtext2"
+            app:layout_constraintTop_toBottomOf="@+id/nametext" />
+
+        <TextView
+            android:id="@+id/breedtext2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nametext"
+            android:fontFamily="@font/font1"
+            android:text="Breed:"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/breedtext"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.146"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/contacttext"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/nametext"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="9dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_toRightOf="@+id/img1"
+            android:layout_below="@+id/breedtext"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/font1"
             android:text="Contact"
-            android:textColor="#000"
-            android:textSize="25sp" />
-        <TextView
-            android:id="@+id/breedtext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/contacttext"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="9dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_toRightOf="@+id/img1"
-            android:text="Breed"
-            android:textColor="#000"
-            android:textSize="25sp" />
+            android:textColor="#C59292"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.104"
+            app:layout_constraintStart_toEndOf="@+id/contacttext2"
+            app:layout_constraintTop_toBottomOf="@+id/addresstext"
+            app:layout_constraintVertical_bias="0.0" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/contacttext2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/breedtext"
+            android:fontFamily="@font/font1"
+            android:text="Contact:"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/contacttext"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.15"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/addresstext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/breedtext"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/font1"
+            android:text="Address"
+            android:textColor="#C59292"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toEndOf="@+id/contacttext2"
+            app:layout_constraintTop_toBottomOf="@+id/breedtext" />
+
+        <TextView
+            android:id="@+id/addresstext2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/breedtext"
+            android:fontFamily="@font/font1"
+            android:text="Address:"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/addresstext"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.156"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
