--- a/app/src/main/res/layout/activity_add_pet.xml
+++ b/app/src/main/res/layout/activity_add_pet.xml
@@ -30,9 +30,10 @@
         <Button
             android:id="@+id/browse"
             android:layout_width="wrap_content"
-            android:fontFamily="@font/font1"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="12dp"
+            android:fontFamily="@font/font1"
             android:text="Add Image" />
     </LinearLayout>
 
@@ -40,9 +41,24 @@
         android:id="@+id/name"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="52dp"
         android:fontFamily="@font/font1"
         android:hint="Name of Owner"
+        android:textColor="#FFFFFF"
+        android:textColorHint="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+
+    <EditText
+        android:id="@+id/petname"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="112dp"
+        android:fontFamily="@font/font1"
+        android:hint="Name of Pet"
         android:textColor="#FFFFFF"
         android:textColorHint="@color/white"
         android:textSize="20sp"
@@ -55,11 +71,11 @@
         android:id="@+id/contact"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:hint="Contact No."
-        android:textColorHint="@color/white"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/font1"
+        android:hint="Contact No."
         android:textColor="#FFFFFF"
+        android:textColorHint="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -70,13 +86,13 @@
         android:id="@+id/breed"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="72dp"
+        android:fontFamily="@font/font1"
         android:hint="Breed of Pet"
         android:textColor="#FFFFFF"
+        android:textColorHint="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColorHint="@color/white"
-        android:fontFamily="@font/font1"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
@@ -85,14 +101,14 @@
         android:id="@+id/address"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/font1"
 
         android:hint="Address"
         android:textColor="#FFFFFF"
+        android:textColorHint="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textColorHint="@color/white"
 
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,11 +118,11 @@
         android:id="@+id/upload"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="Add Pet"
-        android:textSize="25sp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/font1"
+        android:text="Add Pet"
         android:textColor="#fff"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
